dataset1235/2025-2/805158916/users/720854925/executions/71079933_359632665.log
== SUBMISSION (2025-08-13 15:08:22)
-- CODE: 
numero=250
print(numero)
numero=numero/4
round(numero)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
250
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
250
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 15:04:48)
-- CODE: 
numero=250
print(numero)
numero=numero/4
print(round,numero)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
<built-in function round> 62.5
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
<built-in function round> 62.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 15:09:08)
-- CODE: 
numero=250
print(numero)
numero=numero/6
print(round(numero)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 4
    print(round(numero)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 4
    print(round(numero)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 15:13:20)
-- CODE: 
numero=250
print(numero)
numero=numero/6
print(roundnumero/6)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(roundnumero/6)
          ^^^^^^^^^^^
NameError: name 'roundnumero' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(roundnumero/6)
          ^^^^^^^^^^^
NameError: name 'roundnumero' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 16:23:43)
-- CODE: 
numero1=250
print(numero1)
numero2=numero1/6
round(numero2.2)
print(numero)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 4
    round(numero2.2)
          ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 4
    round(numero2.2)
          ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 16:25:31)
-- CODE: 
numero1=250
print (numero1)
numero2=numero1/6
print(numero2)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 15:08:54)
-- CODE: 
numero=250
print(numero)
numero=numero/6
round(numero)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
250
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
250
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 15:19:34)
-- CODE: 
numero=250
print(numero)
numero=numero/6
print(roundnumero.y)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(roundnumero.y)
          ^^^^^^^^^^^
NameError: name 'roundnumero' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(roundnumero.y)
          ^^^^^^^^^^^
NameError: name 'roundnumero' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 15:19:36)
-- CODE: 
numero=250
print(numero)
numero=numero/6
print(roundnumero.y)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(roundnumero.y)
          ^^^^^^^^^^^
NameError: name 'roundnumero' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(roundnumero.y)
          ^^^^^^^^^^^
NameError: name 'roundnumero' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 16:22:24)
-- CODE: 
numero1=250
print(numero1)
numero2=numero1/6
round(numero2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
250
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
250
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 16:23:02)
-- CODE: 
numero1=250
print(numero1)
numero2=numero1/6
print(round(numero2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
42
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 15:25:46)
-- CODE: 
numero=250
print(numero)
numero=numero/6
round(numero,2)
print(numero)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 15:08:55)
-- CODE: 
numero=250
print(numero)
numero=numero/6
round(numero)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
250
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
250
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 16:21:31)
-- CODE: 
numero=250
print(numero)
numero=numero/6
round(numero)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
250
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
250
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 16:32:39)
-- CODE: 
numero1=250
print (numero1)
numero2=numero1/6
print(round(numero2,2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.67
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 15:04:30)
-- CODE: 
numero=250
print(numero)
numero=numero/4
print(round,2numero)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 4
    print(round,2numero)
                ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 4
    print(round,2numero)
                ^
SyntaxError: invalid decimal literal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 15:04:51)
-- CODE: 
numero=250
print(numero)
numero=numero/4
print(roundnumero)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(roundnumero)
          ^^^^^^^^^^^
NameError: name 'roundnumero' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(roundnumero)
          ^^^^^^^^^^^
NameError: name 'roundnumero' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 15:03:36)
-- CODE: 
numero=250
print(numero)
numero=numero/4
print(numero)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
62.5
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
62.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 15:28:52)
-- CODE: 
numero=250
print(numero)
numero=numero/6
round(numero)
print(numero)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 15:07:56)
-- CODE: 
numero=250
print(numero)
numero=numero/4
print(numero)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
62.5
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
62.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 15:11:28)
-- CODE: 
numero=250
print(numero)
numero=numero/6
print(round(41.67))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
42
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 15:28:52)
-- CODE: 
numero=250
print(numero)
numero=numero/6
round(numero)
print(numero)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 15:09:21)
-- CODE: 
numero=250
print(numero)
numero=numero/6
print(numero)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 16:23:44)
-- CODE: 
numero1=250
print(numero1)
numero2=numero1/6
round(numero2.2)
print(numero)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 4
    round(numero2.2)
          ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 4
    round(numero2.2)
          ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 15:18:48)
-- CODE: 
numero=250
print(numero)
numero=numero/6
print(roundnumero)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(roundnumero)
          ^^^^^^^^^^^
NameError: name 'roundnumero' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(roundnumero)
          ^^^^^^^^^^^
NameError: name 'roundnumero' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
